# ghostty-ambient

./: .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  README.md  als  install.sh  main.py  pyproject.toml  uninstall.sh
.github/workflows/: release.yml
src/ghostty_ambient/: __init__.py  adaptive_model.py  adaptive_scorer.py  bayesian_embedding.py  browser.py  cli.py  color.py  color_posterior.py  daemon.py  daemon_manager.py  embedding_cache.py  embeddings.py  history.py  observations.py  phase_detector.py  picker.py  scorer.py  sensor.py  theme_generator.py  themes.py  tui.py
src/ghostty_ambient/factors/: __init__.py  base.py  builtin.py
src/ghostty_ambient/scoring/: __init__.py  theme_scorer.py
src/ghostty_ambient/sensors/: __init__.py  als.m  loader.py  protocol.py  registry.py
src/ghostty_ambient/sensors/backends/: __init__.py  linux.py  macos.py  windows.py
tests/: conftest.py
tests/fixtures/: README.md  history_autopilot_lock_in.json  history_context_oscillation.json  history_relentless_explorer.json  history_tectonic_shift.json
tests/integration/: test_behavioral_scenarios.py
tests/unit/: test_adaptive_model.py  test_bayesian_embedding.py  test_color.py  test_color_posterior.py  test_embedding_cache.py  test_embeddings.py  test_history.py  test_observations.py  test_phase_detector.py  test_themes.py
tests/unit/test_factors/: __init__.py  test_base.py  test_builtin.py
