[project]
name = "ghostty-ambient"
version = "0.2.0"
description = "Ambient light-aware Ghostty theme selector with Bayesian preference learning"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Gezim Basha" }]
license = "MIT"
keywords = ["ghostty", "terminal", "theme", "ambient", "bayesian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
dependencies = [
    "simple-term-menu>=1.6.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
    "readchar>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/gezibash/ghostty-ambient"
Repository = "https://github.com/gezibash/ghostty-ambient"
Issues = "https://github.com/gezibash/ghostty-ambient/issues"

[project.optional-dependencies]
windows = ["winsdk>=1.0.0b10"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "freezegun>=1.2.0",
]

[project.scripts]
ghostty-ambient = "ghostty_ambient.cli:main"

# Plugin entry point for third-party sensor backends
# Example: A custom sensor plugin can register via:
#   [project.entry-points."ghostty_ambient.sensors"]
#   my_sensor = "my_package.sensors:MySensorBackend"
[project.entry-points."ghostty_ambient.sensors"]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ghostty_ambient"]
omit = ["src/ghostty_ambient/cli.py", "src/ghostty_ambient/daemon.py", "src/ghostty_ambient/picker.py", "src/ghostty_ambient/browser.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
